# game-of-life-hs

./: README.md  game-of-life-hs.cabal
src/: AI.hs  Board.hs  Draw.hs  Input.hs  Main.hs  Update.hs  World.hs
