name:                game-of-life-hs
version:             0.1.0.0
synopsis:            Gomoku (5-in-a-row) game
-- description:         
homepage:            http://studres.cs.st-andrews.ac.uk/CS2006
author:              Edwin Brady
maintainer:          ecb10@st-andrews.ac.uk
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gomoku
  main-is:             Main.hs

  Other-modules:       Board, Input, Draw, AI
  build-depends:       base, gloss, containers, optparse-applicative, aeson, directory, text, bytestring, time
  
  hs-source-dirs:      src
  default-language:    Haskell2010
