name:                game-of-life-hs
version:             0.1.0.0
synopsis:            Conway's Game of Life
-- description:         
homepage:            http://studres.cs.st-andrews.ac.uk/CS2006
author:              Shikhar Srivastava
maintainer:          shikhars2006@gmail.com; Shikhar-Srivastava-16 @ github
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gol-hs
  main-is:             Main.hs

  Other-modules:       World, Input, Draw, Update
  build-depends:       base, gloss, containers, optparse-applicative, aeson, directory, text, bytestring, time
  
  hs-source-dirs:      src
  default-language:    Haskell2010
